Valor dos jogos

--- a/Jogos.html
+++ b/Jogos.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Página de Jogos</h1>
+    <p>Jogos a partir de = R$ 100,00</p>
     <a href="index.html">ir para a página de jogos</a>
 </body>
 </html>
