Explicando sobre o site

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Página Home</h1>
+    <p>O melhor site de venda de jogos</p>
     <a href="Jogos.html">ir para a página de jogos</a>
 </body>
 </html>
